tests/toy/neg/000967_mutation.toylang
program a = { if a then a sleep; } .
